--- a/CShow.html
+++ b/CShow.html
@@ -22,6 +22,10 @@
 
     <h4>Our Greatest Loves</h4>
       <p>Below is a list of our favorite CDrama.</p>
-      <p>The Untamed<br> Word of Honor<br> </p></body></html>
+      <ul><li>The Untamed</li><li>Word of Honor<li> </ul>
+    
+    <h4>Favorite Elements</h4>
+    <ol><li>Unambigiously Happy Ending</li>
+    <li>Impactful FL</li><li>Non-toxic ML</li></ol></body></html>
 
     
