--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       <p>Not every show needs a happy ending --- but for Blue and Mayko the ending is crucial, and sometimes it takes knowing the ending to have the courage to embark on a 50 episode cryfest.</p>
       
-    <p>A key function of this site is to track information on dramas' endings, recording whether a given drama has a happy ending (HE) or not. <br> 
+    <p>A key function of this site is to track information on dramas' endings— recording whether a given drama has a happy ending (HE) or not. <br> 
       This mission is inspired by much pain in our past.</p>
 
     <h4>Our Greatest Loves</h4>
