--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <h4>Our Greatest Loves</h4>
       <p>Below is a list of our favorite CDrama.</p>
-      <ul><li>The Untamed</li><li>Word of Honor<li> </ul>
+      <ul><li>The Untamed</li><li>Word of Honor</li> </ul>
     
     <h4>Favorite Elements</h4>
     <ol><li>Unambigiously Happy Ending</li>
