--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
     This is fan page for Wuxia and <b>Romance</b> as well as Xianxia!<br>
 
+     See our landing page <h2> <a href = "cShow.html" target="HERE"> </a>h2>
+
     <img src="https://preview.redd.it/kissing-scenes-in-blossom-v0-35i8hjakgope1.jpg?width=736&format=pjpg&auto=webp&s=befd67c81b0aa70ab7b06a08979a178e55d72574" border="10">
     <p>
         <br>
