--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     This is fan page for Wuxia and <b>Romance</b> as well as Xianxia!<br>
 
-     See our landing page <a href = "https://github.com/MaykoMaeCode/CShow/blob/f9c03fedc555b118bca8445012ede71c1a7bde16/cShow.html" target="HERE"> </a>
+     <p><h2> See our landing page <a href = "https://github.com/MaykoMaeCode/CShow/blob/f9c03fedc555b118bca8445012ede71c1a7bde16/cShow.html" target="_blank" HERE> </a> </h2></p>
 
     <img src="https://preview.redd.it/kissing-scenes-in-blossom-v0-35i8hjakgope1.jpg?width=736&format=pjpg&auto=webp&s=befd67c81b0aa70ab7b06a08979a178e55d72574" border="10">
     <p>
