--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     This is fan page for Wuxia and <b>Romance</b> as well as Xianxia!<br>
 
-     <p>See our landing page <br> <a href = "https://github.com/MaykoMaeCode/CShow/blob/24cbd63ab3632af3e0e178f6f21ffb40e280e372/cShow.html" target="_blank"> HERE</a></p>
+     <p>See our landing page <a href = "https://github.com/MaykoMaeCode/CShow/blob/24cbd63ab3632af3e0e178f6f21ffb40e280e372/cShow.html" target="_blank"> HERE</a></p>
 
     <img src="https://preview.redd.it/kissing-scenes-in-blossom-v0-35i8hjakgope1.jpg?width=736&format=pjpg&auto=webp&s=befd67c81b0aa70ab7b06a08979a178e55d72574" border="10">
     <p>
