--- a/Why.html
+++ b/Why.html
@@ -22,7 +22,7 @@
 
     This is fan page for Wuxia and <b>Romance</b> as well as Xianxia!<br>
 
-     <p>See our landing page <a href = "cShow.html" target="_self"> HERE</a></p>
+     <p>See our home page <a href = "cShow.html" target="_self"> HERE</a></p>
 
     <img src="https://preview.redd.it/kissing-scenes-in-blossom-v0-35i8hjakgope1.jpg?width=736&format=pjpg&auto=webp&s=befd67c81b0aa70ab7b06a08979a178e55d72574" border="10">
     <p>
