--- a/Why.html
+++ b/Why.html
@@ -7,7 +7,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <link rel="stylesheet" href="styles.css">
-     <link rel="stylesheet-font" href="css/main.css">
+     <link rel="stylesheet" href="font-families.css">
     <meta charset="utf-8" />
     <meta name="viewport" contents="With=device-width, initial-scale=1" />
     <title>WuRoXia</title>
