--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet-font" href="css/main.css">
+        <link rel="stylesheet" href="font-families.css">
         <title>CShow - The Cdrama Site</title>
     </head>
     <body>
