--- a/index.html
+++ b/index.html
@@ -29,4 +29,6 @@
     <ol><li>Unambigiously Happy Ending</li>
     <li>Impactful FL</li><li>Non-toxic ML</li></ol></body></html>
 
+    <p> Visit our passionate <a href = "Why.html" target="_self"> about page </a> to read more. </p>
+
     
