--- a/endingsAreTheyGood.html
+++ b/endingsAreTheyGood.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="styles.css">
 <style>p.double {border-style: double;}</style>
 <h1>Endings: What makes them Good?</h1>
 <br>A good ending in our prespective has several things: 
