--- a/Why.html
+++ b/Why.html
@@ -136,7 +136,7 @@
         </tr>
     </table>
 
-     <p>See our home page <a href = "Why.html" target="_self"> HERE</a></p>
+     <p>See our home page <a href = "index.html" target="_self"> HERE</a></p>
 
 </body>
 
