--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+nd4<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -30,5 +30,5 @@
     <li>Impactful FL</li><li>Non-toxic ML</li></ol></body></html>
  
     <p> Visit our passionate <a href = "Why.html" target="_self"> about page </a> to read more. </p>
-    <p> Visit our opion on endsings <a href = "endingsAreTheyGood.html" target="_self"> </a> to read more. </p>
+    <p> Visit our opion on <a href = "endingsAreTheyGood.html" target="_self"> endings </a> to read more. </p>
     
